FullQa New/src/PS Enterprise/objects/Team_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines the default permission level for roles accessing the Manage Team and Team Schedule Management pages.</description>
    <fields>
        <fullName>Enable_Send_Notifications__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, the Team Schedule Notifications feature is enabled on the Team Schedule Planner page.</description>
        <inlineHelpText>If selected, the Team Schedule Notifications feature is enabled on the Team Schedule Planner page.</inlineHelpText>
        <label>Enable Send Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fill_Schedule_Tooltip__c</fullName>
        <description>The API name of a field set used to display a custom tooltip for the Fill Schedule tab in the Team Schedule Planner.</description>
        <inlineHelpText>The API name of a field set used to display a custom tooltip for the Fill Schedule tab in the Team Schedule Planner.</inlineHelpText>
        <label>Fill Schedule Tooltip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Email_Template_Name__c</fullName>
        <description>Specifies the Template Unique Name of the email template to use for team schedule notifications.
		If no template is defined, a system-generated email template for notifications is used that includes the team schedule time slot names, start times, and end times. Note that you can override the template at a team level with the Custom Template Name (Schedule) field on the Team object.</description>
        <inlineHelpText>Specifies the Template Unique Name of the email template to use for team schedule notifications.</inlineHelpText>
        <label>Email Template (Schedule)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swap_Email_Template_Name__c</fullName>
        <description>Specifies the Template Unique Name of the email template to use for team shift swap notifications. If no template is defined, a system-generated email template for notifications is used that includes the team name, shift day and date,  previously assigned team member, new team member, start and end times, work hours, team time zone, user initiating the swap, and date and time of the swap.  Note that you can override the template at a team level with the Custom Template Name (Swap) field on the Team object.</description>
        <inlineHelpText>Specifies the Template Unique Name of the email template to use for team shift swap notifications.</inlineHelpText>
        <label>Email Template (Swap)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Permission_Level__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <description>Defines the default Team Member permission level for roles accessing the Manage Team and Team Schedule Management pages. Valid values are integers where 0 is None (no access), 1 is Read, and 2 is Edit. If not defined, the default is 1 (Read).</description>
        <inlineHelpText>Defines the default Team Member permission level for roles accessing the Manage Team and Team Schedule Management pages. Valid values are integers where 0 is None (no access), 1 is Read, and 2 is Edit. If not defined, the default is 1 (Read).</inlineHelpText>
        <label>Team Member Permission Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Team Settings</label>
</CustomObject>